[package]
name = "asnames"
version = "0.1.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
repository = "https://github.com/bgpkit/asnames-rs"
documentation = "https://docs.rs/bgpkit-parser"
license = "MIT"
edition = "2021"
description = """
A library for simple Autonomous System (AS) names and country lookup
"""
keywords = ["bgp", "bgpkit"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneio = {version="0.10.1", default-features = false, features=['remote']}
anyhow = "1.0"